now regex matching implemented..

--- a/TryHackMe/Kibana/Kibana.html
+++ b/TryHackMe/Kibana/Kibana.html
@@ -135,7 +135,7 @@ set [needed attribute]</p>
 
 <p>As you can see below, the script was successfully run:</p>
 
-<p><img src="Screen Shot 2024-10-04 at 15.27.38.png" alt="alt text" /></p>
+<p><img src="./images/Screen Shot 2024-10-04 at 15.27.38.png" alt="alt text" /></p>
 
 <p>Initially, there will not be any output prompted from target ,so do not worry about it. Just check whether you correctly get reverse shell connection or not.</p>
 
