CSS utility added.

--- a/TryHackMe/Kibana/Kibana.html
+++ b/TryHackMe/Kibana/Kibana.html
@@ -1,4 +1,43 @@
-<p>Before you begin, always add your ip address to hosts file so as to avoid burden especially ip address related operations, while you are actively pentesting.</p>
+<html><head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        line-height: 1.6;
+        background-color: #f4f4f4;
+    }
+    h1, h2, h3 {
+        color: #333;
+        border-bottom: 2px solid #ddd;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+    p {
+        margin-bottom: 20px;
+    }
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto 20px auto;
+    }
+    code {
+        background-color: #f9f9f9;
+        border: 1px solid #ccc;
+        padding: 5px;
+        border-radius: 5px;
+    }
+    pre {
+        background-color: #333;
+        color: #f8f8f2;
+        padding: 10px;
+        border-radius: 5px;
+        overflow-x: auto;
+    }
+</style>
+</head><body><p>Before you begin, always add your ip address to hosts file so as to avoid burden especially ip address related operations, while you are actively pentesting.</p>
 
 <p>How to apply ?</p>
 
@@ -214,3 +253,4 @@ chmod +x linpeas.sh
 <p>All in all, this writeup demonstrates how different methodologies can be used at once. Through reconnaissance to post-exploitation, I provided 3 strong pathway you to understand the idea behind the scene. The detailed steps, ranging from mapping out unusual ports (Kibana) to <code>exploiting vulnerability</code> and <code>escalating privilege</code>, show the significance of understanding each phase deeply. It's crucial not only to follow the steps meticulously but also to apply knowledge practically and adapt to challenges as they arise. Always remember, careful planning and paying attention to small details, such as setting up the Metasploit console or configuring script parameters correctly, can save you a lot of trouble during the engagement.</p>
 
 <p>May The Pentest Be With You ! !</p>
+</body></html>
