--- a/TryHackMe/BlueprintMachine/Blueprint.html
+++ b/TryHackMe/BlueprintMachine/Blueprint.html
@@ -1,4 +1,43 @@
-<h2>Reconnaissance:</h2>
+<html><head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        line-height: 1.6;
+        background-color: #f4f4f4;
+    }
+    h1, h2, h3 {
+        color: #333;
+        border-bottom: 2px solid #ddd;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+    p {
+        margin-bottom: 20px;
+    }
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto 20px auto;
+    }
+    code {
+        background-color: #f9f9f9;
+        border: 1px solid #ccc;
+        padding: 5px;
+        border-radius: 5px;
+    }
+    pre {
+        background-color: #333;
+        color: #f8f8f2;
+        padding: 10px;
+        border-radius: 5px;
+        overflow-x: auto;
+    }
+</style>
+</head><body><h2>Reconnaissance:</h2>
 
 <p>First of all, to understand whether machine live or not try to
 <code>ping</code> it.</p>
@@ -139,3 +178,4 @@ enum4linux -a 10.10.118.119
 <p>However, the web app disabled such commands by default ,so lets run another payload from <a href="https://github.com/nobodyatall648/osCommerce-2.3.4-Remote-Command-Execution">Github</a></p>
 
 <p>To understand how the script works, I initially run it just by no parameters and inputs.</p>
+</body></html>
