--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         ul li {
-            margin: 15px 0;
+            margin: 40px 0;
         }
 
         a {
@@ -79,9 +79,9 @@ Click below to view detailed analysis and solutions for each
 challenge.</p>
 
         <ul>
-            <li><a href="Blueprint/Blueprint.html">Blueprint CTF 
+            <li><a href="Blueprint/Blueprint.html">Blueprint 
 Writeup</a></li>
-            <li><a href="Kibana/Kibana.html">Kibana CTF Writeup</a></li>
+            <li><a href="Kibana/Kibana.html">Kibana Writeup</a></li>
             <!-- Add more CTF links here -->
         </ul>
 
