deploy: 9e96a97ba98f1541ddadbf45641561e1c77c88a4

--- a/index.html
+++ b/index.html
@@ -1,95 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>CTF Writeups</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        .container {
-            max-width: 800px;
-            padding: 20px;
-            margin: 20px;
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        h1 {
-            color: #0367A6;
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-
-        p {
-            font-size: 1.2em;
-            color: #666;
-            margin-bottom: 30px;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        ul li {
-            margin: 15px 0;
-        }
-
-        a {
-            font-size: 1.2em;
-            text-decoration: none;
-            color: #0367A6;
-            padding: 10px 20px;
-            border: 2px solid #0367A6;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        a:hover {
-            background-color: #0367A6;
-            color: #fff;
-        }
-
-        footer {
-            margin-top: 30px;
-            font-size: 0.9em;
-            color: #aaa;
-        }
+        body { font-family: Arial, sans-serif; background-color: #f4f4f9; color: #333; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
+        .container { max-width: 800px; padding: 20px; margin: 20px; background-color: #fff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); border-radius: 8px; text-align: center; }
+        h1 { color: #0367A6; font-size: 2.5em; margin-bottom: 20px; }
+        ul { list-style-type: none; padding: 0; }
+        ul li { margin: 15px 0; }
+        a { font-size: 1.2em; text-decoration: none; color: #0367A6; padding: 10px 20px; border: 2px solid #0367A6; border-radius: 5px; transition: background-color 0.3s, color 0.3s; }
+        a:hover { background-color: #0367A6; color: #fff; }
     </style>
 </head>
 <body>
-
-    <div class="container">
+    <div class='container'>
         <h1>CTF Writeups</h1>
-        <p>Welcome to my collection of Capture The Flag (CTF) writeups. 
-Click below to view detailed analysis and solutions for each 
-challenge.</p>
-
         <ul>
-            <li><a href="Blueprint/Blueprint.html">Blueprint CTF 
-Writeup</a></li>
-            <li><a href="Kibana/Kibana.html">Kibana CTF Writeup</a></li>
-            <!-- Add more CTF links here -->
         </ul>
-
-        <footer>
-            <p>© 2024 Onurcan Genç. All rights reserved.</p>
-        </footer>
     </div>
-
 </body>
 </html>
-
