--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class='container'>
         <h1>CTF Writeups</h1>
         <ul>
-        <li><a href='TryHackMe/Blueprint/Blueprint.html'>Blueprint CTF Writeup</a></li>
-        <li><a href='TryHackMe/Kibana/Kibana.html'>Kibana CTF Writeup</a></li>
+        <li><a href='TryHackMe/Blueprint/Blueprint.html'>Blueprint Writeup</a></li>
+        <li><a href='TryHackMe/Kibana/Kibana.html'>Kibana Writeup</a></li>
         </ul>
     </div>
 </body>
