new parts added.

--- a/TryHackMe/Dogcat/Dogcat.html
+++ b/TryHackMe/Dogcat/Dogcat.html
@@ -227,5 +227,7 @@ PGltZyBzcmM9ImRvZ3MvPD9waHAgZWNobyByYW5kKDEsIDEwKTsgPz4uanBnIiAvPg0K
 
 <p><img src="./images/26.png" alt="alt text" /></p>
 
-<p>As a software developer, I mentioned about what could do the backend code on server-side.</p>
+<p>As a software developer, I thought that  what actions should I take on the backend code on <code>server-side</code>.</p>
+
+<p>Using variable without conditional statements mainly cause vulnerability especially in <code>php</code>. That's why, I can  </p>
 </body></html>
