--- a/TryHackMe/Dogcat/Dogcat.html
+++ b/TryHackMe/Dogcat/Dogcat.html
@@ -243,5 +243,5 @@ Applying <code>php://filter</code> bypasses <code>cat</code> , <code>dog</code> 
 <p><img src="./images/28.png" alt="alt text" /></p>
 
 <p>Now we are ready to reach flag ! ! !
-As far as I remember, we have also <code>SSH</code> port open. That's why, I will try to use unshadow through <code>/etc/passwd</code> and <code>/etc/shadow</code></p>
+As far as I remember, we have also <code>SSH</code> port open. That's why, I will try to use unshadow through <code>/etc/passwd</code> and <code>/etc/shadow</code>.</p>
 </body></html>
