--- a/TryHackMe/Dogcat/Dogcat.html
+++ b/TryHackMe/Dogcat/Dogcat.html
@@ -236,12 +236,46 @@ PGltZyBzcmM9ImRvZ3MvPD9waHAgZWNobyByYW5kKDEsIDEwKTsgPz4uanBnIiAvPg0K
 <p><code>
 http://dogcat.thm/?view=php://filter/convert.base64-encode/resource=dog/../../../../etc/passwd&amp;ext
 </code>
-Applying <code>php://filter</code> bypasses <code>cat</code> , <code>dog</code> string and path direction filters ,but not the extension itself. Moreover, <code>null byte</code> also did not work as you know because of the path restrictions. Therefore, it is suitable to use <code>$ext</code> to bypass extension append. Now let's try to move our target route called <code>/etc/passwd</code>.</p>
+Applying <code>php://filter</code> bypasses <code>cat</code> , <code>dog</code> string and path direction filters ,but not the extension itself. Moreover, <code>null byte</code> also did not work as you know because of the path restrictions. Therefore, it is suitable to use <code>$ext</code> to bypass extension append. To pass multiple parameters in each URL, we should use <code>&amp;</code> parameter. Now let's try to move our target route called <code>/etc/passwd</code>.</p>
 
 <p><img src="./images/27.png" alt="alt text" /></p>
 
 <p><img src="./images/28.png" alt="alt text" /></p>
 
 <p>Now we are ready to reach flag ! ! !
-As far as I remember, we have also <code>SSH</code> port open. That's why, I will try to use unshadow through <code>/etc/passwd</code> and <code>/etc/shadow</code>.</p>
+As far as I remember, we have also <code>SSH</code> port open. That's why, I will try to use unshadow through <code>/etc/passwd</code> and <code>/etc/shadow</code>. Although I successfully reached the <code>/etc/passwd</code> file, there was not any <code>/etc/shadow</code> file located on that path ,so let me try to open <code>flag.php</code> with <code>php filter base64</code> conversion.</p>
+
+<p><code>
+http://dogcat.thm/?view=php://filter/convert.base64-encode/resource=dog/../flag&amp;ext=.php
+</code></p>
+
+<p>Passing extensions through the <code>$ext</code> variable may give the result for all files.</p>
+
+<p><img src="./images/29.png" alt="alt text" /></p>
+
+<p><code>View Page Source</code> option allows us to directly the encoded source file. 
+<img src="./images/30.png" alt="alt text" /></p>
+
+<p>Finding any clues about <code>flag2</code> was significantly tough process for me. However, further <em>reconnaissance</em> always works in <code>Offensive Security</code>. As you know, I have already checked web server version (Apache 2) that we are using. Let's verify the path the default logs stored on web server.</p>
+
+<p><img src="./images/31.png" alt="alt text" /></p>
+
+<p>Let me try also the <code>/var/log/apache2/access.log</code> file to achieve further enumeration.</p>
+
+<p><img src="./images/32.png" alt="alt text" /></p>
+
+<p>Decoded format:
+<img src="./images/33.png" alt="alt text" /></p>
+
+<p>The application directly gets our user agent as above. After a couple of minutes, I thought that in HackTheBox platform I saw an approach which was very useful especially to catch <code>RCE</code> on User Agent part.</p>
+
+<p><img src="./images/34.png" alt="alt text" /></p>
+
+<p>Bursuite gave me better result. Let me try to user-agent manipulation because  if we can somehow execute <code>php's system();</code> command it will also execute on main php file. After I execute such a command:</p>
+
+<p><code>
+&lt;?php system("ls")?&gt;
+</code></p>
+
+<p>I was no longer access <code>access.log</code> file because of the default <code>Apache2</code> configuration. Using web shell can be suitable for our condition <code>&amp;cmd='ls' or ?cmd='ls'</code></p>
 </body></html>
